--- a/src/app/modules/tracking/tracking-view/tracking-view.mobile.scss
+++ b/src/app/modules/tracking/tracking-view/tracking-view.mobile.scss
@@ -7,6 +7,7 @@
             margin: 0 auto;
             box-shadow: 1px 3px 11px #CCC;
             padding: 0 24px;
+            margin: 14px auto 0 auto;
 
             &.no-padding {
                 padding: 0;
